# OneHourGUI

qt/button/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
qt/countdown/: CMakeLIsts.txt  CountdownWindow.cpp  CountdownWindow.h  main.cpp  resources.qrc
qt/page/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
qt/tab/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
